# auth-app

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  Cargo.toml  README.md  Taskfile.yml  clippy.toml  compose.override.yml  compose.prod.yml  compose.yml  deny.toml  eslint.config.js  openapi.json  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/auth/: Login.tsx  api.ts  login.css  session.tsx
apps/web/src/lib/: format.test.ts  format.ts
apps/web/src/shell/: AdminLayout.tsx  NotFound.tsx  RequireRole.tsx  admin.css  compose.test.ts  compose.ts  registry.ts  routes.tsx  theme.css
crates/api/: Cargo.toml
crates/api/src/: audit.rs  auth.rs  cors.rs  error.rs  lib.rs  oauth.rs  openapi.rs  payments_webhook.rs  rate_limit.rs  rbac.rs  session.rs  telemetry.rs  transactions.rs
crates/api/tests/: audit_it.rs  login_rate_limit_it.rs  oauth_it.rs  payments_webhook_it.rs  rbac_it.rs  transactions_it.rs
crates/application/: Cargo.toml
crates/application/src/: audit.rs  auth.rs  lib.rs  oauth.rs  payments.rs  payments_webhook.rs  session.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs  migration.rs  module.rs  registry.rs
crates/domain/: Cargo.toml
crates/domain/src/: audit.rs  auth.rs  health.rs  lib.rs  oauth.rs  session.rs
crates/domain/src/saro/: builder.rs  catalog.rs  entity.rs  mod.rs  port.rs  value_object.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 0001_baseline.sql  0002_admin_auth.sql  0003_admin_sessions.sql  0004_payments_schema.sql  0005_audit_events.sql  0006_rbac_roles.sql  0007_oauth.sql  0008_payment_webhooks.sql  0009_admin_display_name.sql
crates/infrastructure/src/: admin_repo.rs  audit_repo.rs  clock.rs  db.rs  health.rs  lib.rs  oauth_http.rs  oauth_provider.rs  oauth_repos.rs  oauth_secrets.rs  password.rs  payments_fake.rs  payments_repo.rs  payments_stripe.rs  payments_stripe_webhook.rs  payments_webhook_store.rs  session_repo.rs  tokens.rs
crates/infrastructure/tests/: admin_repo_it.rs  audit_repo_it.rs  oauth_repos_it.rs  payments_repo_it.rs  payments_webhook_store_it.rs  session_repo_it.rs
crates/module-demo/: Cargo.toml
crates/module-demo/src/: lib.rs
crates/payments/: Cargo.toml
crates/payments/src/: lib.rs  money.rs  payment.rs  provider.rs  webhook.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: DEPLOYMENT.md  README.md  SECURITY.md  adding-a-module.md
docs/adr/: 0001-hexagonal-architecture.md  0002-pluggable-modules.md  0003-server-sessions-over-jwt.md  0004-provider-agnostic-boundaries.md  README.md
infra/docker/: api.Dockerfile  web.Dockerfile
infra/postgres/: README.md  api.override.yml  docker-compose.yml
infra/postgres/initdb/: 10-app-role.sh
infra/postgres/scripts/: backup-scheduler.sh  pg-backup.sh  pg-restore.sh  test-backup-restore.sh
infra/traefik/: README.md  docker-compose.yml  traefik.yml
infra/traefik/dynamic/: middlewares.yml  tls.yml
infra/web/: nginx.conf
