[workspace]
# Virtual manifest: the root defines no package of its own so the monorepo stays
# modular and uncoupled. Rust crates live under `crates/`; the frontend apps
# under `apps/` are a separate pnpm workspace and are intentionally not Cargo
# members. New backend crates are picked up automatically by the glob below.
resolver = "2"
members = ["crates/*"]

# Fields shared by every workspace crate. Members opt in with
# `field.workspace = true` (e.g. `edition.workspace = true`).
[workspace.package]
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["auth-app template"]
repository = "https://github.com/templates-lab/auth-app"

# Centralized dependency versions. Members reference these with
# `some-dep.workspace = true` so the whole monorepo stays on one version.
[workspace.dependencies]
# Internal crates, wired as path dependencies. The dependency direction is
# enforced by which of these each member opts into:
#   api → application → domain     infrastructure → domain
#   server (composition root) → api, application, infrastructure, contracts, modules
# `contracts` is the shared plugin contract; feature modules (e.g. `module-demo`)
# implement it and are mounted by the server, never depending on one another.
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
api = { path = "crates/api" }
contracts = { path = "crates/contracts" }
module-demo = { path = "crates/module-demo" }

# External dependencies. The domain crate references no framework or driver;
# `async-trait` is its one exception — an ergonomics macro (not a runtime) that
# lets a port be `async` while staying object-safe behind `dyn`.
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
async-trait = "0.1"
# Password hashing. Argon2id is the OWASP-recommended algorithm for password
# storage; the `argon2` crate pulls in the RustCrypto `password-hash` (PHC
# string) machinery so parameters and salt travel embedded in the encoded hash.
argon2 = "0.5"
# JSON (de)serialization for the HTTP request/response bodies at the API boundary.
serde = { version = "1", features = ["derive"] }
# Postgres access. `default-features = false` drops the bundled runtime/TLS pair
# so we choose them explicitly: the Tokio runtime, rustls (ring) for TLS to
# cloud databases, the Postgres driver, the migration runner, and `macros` (for
# the `sqlx::migrate!` embed macro). We deliberately use only *runtime* queries,
# never the compile-time `query!` macros, so the build never needs a live
# DATABASE_URL or an offline `.sqlx` cache.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "migrate",
    "macros",
] }

# Lints applied across the whole workspace. Members inherit them with
# `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
todo = "warn"
dbg_macro = "warn"

# Compilation profiles shared by every crate.
[profile.dev]
# Faster incremental debug builds.
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
