[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The API layer is the HTTP boundary. It depends on `application` (to invoke use
# cases) and `domain` (for its types), plus `axum` for routing. It holds no
# business logic and no storage concerns — it only translates HTTP to/from the
# application layer.
[dependencies]
application.workspace = true
domain.workspace = true
# The payments bounded context's own types (payment status, money, query) cross
# the transactions HTTP boundary, the same way `domain`'s types do elsewhere.
payments.workspace = true
axum.workspace = true
# Typed cookie building/parsing (HttpOnly/Secure/SameSite/Max-Age) for the
# session and CSRF cookies.
axum-extra.workspace = true
time.workspace = true
# JSON request/response bodies at the HTTP boundary.
serde.workspace = true
# OpenAPI derivation for the JSON API (the contract the TS client is generated
# from).
utoipa.workspace = true
# Explicit-allowlist CORS layer (never a wildcard).
tower-http.workspace = true

# Test-only: `ServiceExt::oneshot` drives the router directly in cors.rs's own
# HTTP-level tests, without binding a real socket; `tokio` provides the
# `#[tokio::test]` runtime. `infrastructure`/`testkit` back the
# `tests/login_rate_limit_it.rs` end-to-end suite with a real, ephemeral
# Postgres instead of fakes.
[dev-dependencies]
tower.workspace = true
tokio.workspace = true
infrastructure.workspace = true
testkit.workspace = true
serde_json.workspace = true
sqlx.workspace = true
# The oauth end-to-end test drives the real OidcProvider against a fake
# `HttpClient` (async-trait to implement it) and builds a fake id_token
# (base64url). The payments-webhook test signs a body with HMAC-SHA256.
async-trait.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
