[package]
name = "application"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The application layer orchestrates use cases. It depends on the domain crates
# (`domain` for auth/sessions, `payments` for the payments bounded context) —
# never on `infrastructure` or `api`. It knows nothing about HTTP or storage;
# it wires domain ports into application services.
[dependencies]
domain.workspace = true
payments.workspace = true
# Structured log events for use-case-level failures (e.g. a webhook that could
# not be applied), emitted through the same `tracing` pipeline as the API layer.
tracing.workspace = true

# Test-only: a stub port needs `async-trait` to implement the async `HealthCheck`
# contract, and `tokio` provides the runtime for `#[tokio::test]`.
[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
