[package]
name = "contracts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The pluggable-module contract. This is the ONE crate that every feature
# module and the composition root (`server`) share: modules implement the
# `Module` trait declared here and never depend on one another. It depends on
# `axum` because a module's contract is to expose an axum `Router`; it holds no
# domain model and no business logic of its own.
[dependencies]
axum.workspace = true
