[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The infrastructure layer implements the domain's ports (adapters). It depends
# on `domain` (to know the port contracts) and on external drivers — `sqlx` for
# Postgres, `async-trait` to implement the async `HealthCheck` port. It never
# depends on `application` or `api`: dependencies point inward.
[dependencies]
domain.workspace = true
async-trait.workspace = true
sqlx.workspace = true

# Test-only: a Tokio runtime for `#[tokio::test]`.
[dev-dependencies]
tokio.workspace = true
