[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The infrastructure layer implements the domain's ports (adapters). It depends
# on `domain` (to know the port contracts) and on external drivers — `sqlx` for
# Postgres, `async-trait` to implement the async `HealthCheck` port. It never
# depends on `application` or `api`: dependencies point inward.
[dependencies]
domain.workspace = true
async-trait.workspace = true
sqlx.workspace = true
# The argon2 adapter implements the `PasswordHasher` port. `tokio` is a real
# dependency here (not just for tests): the adapter offloads the CPU-bound argon2
# work to `spawn_blocking` so it never stalls the async runtime.
argon2.workspace = true
tokio.workspace = true

# Test-only: `#[tokio::test]` still needs the macros; the runtime itself is now a
# normal dependency above. `testkit` spins up the ephemeral Postgres the
# `tests/*_it.rs` integration suites run against.
[dev-dependencies]
tokio.workspace = true
testkit.workspace = true
