[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The infrastructure layer implements the domain's ports (adapters). It depends
# on `domain` and `payments` (to know their port contracts) and on external
# drivers — `sqlx` for Postgres, `async-trait` to implement the async
# `HealthCheck`/`PaymentRepository` ports. It never depends on `application` or
# `api`: dependencies point inward.
[dependencies]
domain.workspace = true
payments.workspace = true
async-trait.workspace = true
sqlx.workspace = true
# The argon2 adapter implements the `PasswordHasher` port. `tokio` is a real
# dependency here (not just for tests): the adapter offloads the CPU-bound argon2
# work to `spawn_blocking` so it never stalls the async runtime.
argon2.workspace = true
tokio.workspace = true
# OAuth/OIDC adapters: `reqwest` for the token/userinfo HTTP calls, `sha2` +
# `base64` for the PKCE `S256` challenge and id_token payload decoding, and
# `serde`/`serde_json` for parsing provider responses.
reqwest.workspace = true
sha2.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true

# Test-only: `#[tokio::test]` still needs the macros; the runtime itself is now a
# normal dependency above. `testkit` spins up the ephemeral Postgres the
# `tests/*_it.rs` integration suites run against.
[dev-dependencies]
tokio.workspace = true
testkit.workspace = true
