[package]
name = "module-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# A demonstration feature module. It implements the `contracts::Module` trait —
# exposing migrations, initialization, and an axum router — to prove the plugin
# system end to end. It depends ONLY on `contracts` (and `axum`), never on other
# feature modules: that isolation is the whole point of the module system.
[dependencies]
contracts.workspace = true
axum.workspace = true
